[gd_scene load_steps=5 format=3 uid="uid://ciiwjjabfwlj5"]

[ext_resource type="Texture2D" uid="uid://8ktdp0yo807u" path="res://ui/assets/Window.png" id="1_oyecw"]
[ext_resource type="Script" path="res://ui/scenes/Game_Over.gd" id="2_on54l"]

[sub_resource type="LabelSettings" id="LabelSettings_leahe"]
font_size = 29
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vpiqs"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameOver" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -199.0
offset_right = 116.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_oyecw")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 6
patch_margin_bottom = 5
script = ExtResource("2_on54l")

[node name="MarginContainer" type="MarginContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -74.0
offset_right = 81.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GameOverText" type="Label" parent="GameOver/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game over!"
label_settings = SubResource("LabelSettings_leahe")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Score" type="Label" parent="GameOver/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="RetryButton" type="NinePatchRect" parent="GameOver/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
texture = ExtResource("1_oyecw")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 6
patch_margin_bottom = 5

[node name="RetryButton" type="Button" parent="GameOver/MarginContainer/VBoxContainer/RetryButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Retry" type="Label" parent="GameOver/MarginContainer/VBoxContainer/RetryButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Retry"
label_settings = SubResource("LabelSettings_vpiqs")

[node name="MenuButton" type="NinePatchRect" parent="GameOver/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
texture = ExtResource("1_oyecw")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 6
patch_margin_bottom = 5

[node name="MenuButton" type="Button" parent="GameOver/MarginContainer/VBoxContainer/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Label" parent="GameOver/MarginContainer/VBoxContainer/MenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
label_settings = SubResource("LabelSettings_vpiqs")

[node name="QuitButton" type="NinePatchRect" parent="GameOver/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
texture = ExtResource("1_oyecw")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 6
patch_margin_bottom = 5

[node name="QuitButton" type="Button" parent="GameOver/MarginContainer/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Quit" type="Label" parent="GameOver/MarginContainer/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit
"
label_settings = SubResource("LabelSettings_vpiqs")

[connection signal="pressed" from="GameOver/MarginContainer/VBoxContainer/RetryButton/RetryButton" to="GameOver" method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOver/MarginContainer/VBoxContainer/MenuButton/MenuButton" to="GameOver" method="_on_menu_button_pressed"]
[connection signal="pressed" from="GameOver/MarginContainer/VBoxContainer/QuitButton/QuitButton" to="GameOver" method="_on_quit_button_pressed"]
